Update copy and also fix the line breaks in mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3323,3 +3323,7 @@ input, select, textarea {
 			}
 
 	}
+
+	#line-break {
+		white-space: pre-line;
+	}
